<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navShowMap"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/show_map" />
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/comment" />
        <item
            android:id="@+id/nav_choosetype"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/choosetype" />
        <item
            android:id="@+id/nav_shownotifes"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/shownotifies" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_signin"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/signin" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
    <item android:title="More Information">
        <menu>
            <item
                android:id="@+id/nav_details"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/details" />
        </menu>
    </item>


</menu>
